--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -135,4 +135,14 @@
         android:max="15000"
         android:progress="500" />
 
+    <ProgressBar
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/valorMaximoSeekBar"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/progressBar"
+        android:max="100"
+        android:progress="0" />
+
 </RelativeLayout>
